k8s/demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app
  # namespace: go-survey
  labels:
    app: go-app
spec:
  selector:
    app: go-app
  type: ClusterIP
  ports:
    - name: go-app
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-app-service
  # namespace: go-survey
  labels:
    app: mongo-app
spec:
  selector:
    app: go-app
  ports:
    - name: mongo-app
      port: 27017
      targetPort: 27017
  type: ClusterIP

---
